fix: rm old inputs

--- a/src/app/profile/components/profile-edit/profile-edit.component.html
+++ b/src/app/profile/components/profile-edit/profile-edit.component.html
@@ -33,11 +33,9 @@
 			</div>
 
 			<div class="l-flex l-flex-1x">
-				<a class="button button-secondary" [routerLink]="['../profile']" [disabled-when-requesting]="true"
-					>Cancel</a
-				>
+				<a class="button button-secondary" [routerLink]="['../profile']">Cancel</a>
 
-				<button type="submit" class="button" [disabled-when-requesting]="true">Save</button>
+				<button type="submit" class="button">Save</button>
 			</div>
 		</form>
 	</div>
