--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -215,7 +215,7 @@
 								class="xl:tw-block tw-hidden tw-box-border tw-absolute tw-right-0 tw-bg-top tw-top-0 tw-scale-y-[0.8] tw-w-full tw-h-full"
 							>
 								<div
-									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('assets/oeb/images/startpage/red_lines_cut.png')]"
+									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('../../assets/oeb/images/startpage/red_lines_cut.png')]"
 								></div>
 							</div>
 							<img
@@ -252,7 +252,7 @@
 								class="xl:tw-block tw-hidden tw-box-border tw-absolute tw-right-0 tw-bg-top tw-top-0 tw-scale-y-[0.8] tw-w-full tw-h-full"
 							>
 								<div
-									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('assets/oeb/images/startpage/red_lines_cut.png')]"
+									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('../../assets/oeb/images/startpage/red_lines_cut.png')]"
 								></div>
 							</div>
 						</div>
@@ -287,7 +287,6 @@
 								class="xl:tw-block tw-hidden tw-box-border tw-absolute tw-right-[-48%] tw-top-[-33%] tw-scale-y-[0.8] tw-w-full tw-h-full"
 							>
 								<img src="assets/oeb/images/aboutpage/double_red_line.png" />
-								<!-- <div class="tw-w-full tw-h-full tw-translate-x-[20%] tw-bg-[url('assets/oeb/images/aboutpage/double_red_line.png')]"></div> -->
 							</div>
 						</div>
 						<div class="tw-bg-white tw-z-10 tw-relative tw-hidden xl:tw-block">
@@ -611,7 +610,7 @@
 								class="xl:tw-block tw-hidden tw-box-border tw-absolute tw-right-0 tw-bg-top tw-top-0 tw-scale-y-[0.8] tw-w-full tw-h-full"
 							>
 								<div
-									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('assets/oeb/images/startpage/red_lines_cut.png')]"
+									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('../../assets/oeb/images/startpage/red_lines_cut.png')]"
 								></div>
 							</div>
 							<img
@@ -648,7 +647,7 @@
 								class="xl:tw-block tw-hidden tw-box-border tw-absolute tw-right-0 tw-bg-top tw-top-0 tw-scale-y-[0.8] tw-w-full tw-h-full"
 							>
 								<div
-									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('assets/oeb/images/startpage/red_lines_cut.png')]"
+									class="tw-w-full tw-h-[150px] tw-translate-x-[70%] tw-translate-y-[47%] tw-bg-repeat-x tw-bg-[url('../../assets/oeb/images/startpage/red_lines_cut.png')]"
 								></div>
 							</div>
 						</div>
@@ -682,7 +681,6 @@
 								class="xl:tw-block tw-hidden tw-box-border tw-absolute tw-right-[-48%] tw-top-[-33%] tw-scale-y-[0.8] tw-w-full tw-h-full"
 							>
 								<img src="assets/oeb/images/aboutpage/double_red_line.png" />
-								<!-- <div class="tw-w-full tw-h-full tw-translate-x-[20%] tw-bg-[url('assets/oeb/images/aboutpage/double_red_line.png')]"></div> -->
 							</div>
 						</div>
 						<div class="tw-bg-white tw-z-10 tw-relative tw-hidden xl:tw-block">
