feat: add color guide

--- a/src/styles/oeb/oeb_styles.scss
+++ b/src/styles/oeb/oeb_styles.scss
@@ -19,6 +19,18 @@ html {
 	--color-black: #323232;
 	--color-blue: #7e73ff;
 	--color-yellow: #ffcc00;
+	--color-yellow-50: #fffefa;
+	--color-yellow-100: #fff5cb;
+	--color-yellow-200: #ffeb9c;
+	--color-yellow-300: #ffe26d;
+	--color-yellow-400: #ffd83e;
+	--color-yellow-500: #ffcf0f;
+	--color-yellow-600: #deb200;
+	--color-yellow-700: #af8c00;
+	--color-yellow-800: #806600;
+	--color-yellow-900: #514000;
+	--color-yellow-950: #221b00;
+
 	--color-purple: #492e98;
 	--color-brightpurple: #9747ff;
 	--color-buttonhover: #6e30f2;
@@ -26,14 +38,97 @@ html {
 	--color-lightred: #ff8383;
 	--color-pink: #ffbab9;
 	--color-lightpink: #fff6f6;
-	--color-lightpink: #fff6f6;
+	--color-pink-50: #ffeaea;
+	--color-pink-100: #ffdede;
+	--color-pink-200: #ffd2d1;
+	--color-pink-300: #ffc6c5;
+	--color-pink-400: #ffbab9;
+	--color-pink-500: #feacab;
+	--color-pink-600: #fd9e9c;
+	--color-pink-700: #fc908e;
+	--color-pink-800: #fb8281;
+	--color-pink-900: #f97573;
+	--color-pink-950: #f76866;
 	--color-lightgreen: #ecfeed;
 	--color-green: #93f993;
+	--color-green-50: #e4ffe4;
+	--color-green-100: #d3ffd3;
+	--color-green-200: #c3fec3;
+	--color-green-300: #b2fcb2;
+	--color-green-400: #a2fba2;
+	--color-green-500: #93f993;
+	--color-green-600: #83f783;
+	--color-green-700: #74f474;
+	--color-green-800: #64f165;
+	--color-green-900: #55ee56;
+	--color-green-950: #47ea48;
+
 	--color-white: #ffffff;
+
 	--color-lightgray: #f5f5f5;
 	--color-darkgray: #6b6b6b;
 	--color-grayinteractive: #cfcece;
+	--color-gray-50: #f3f3f3;
+	--color-gray-100: #dedede;
+	--color-gray-200: #cacaca;
+	--color-gray-300: #b5b5b5;
+	--color-gray-400: #a0a0a0;
+	--color-gray-500: #8b8b8b;
+	--color-gray-600: #777;
+	--color-gray-700: #626262;
+	--color-gray-800: #4d4d4d;
+	--color-gray-900: #383838;
+	--color-gray-950: #242424;
+
 	--color-lightpurple: #f1f0ff;
+	--color-purple-50: #f8f6fc;
+	--color-purple-100: #e2daf3;
+	--color-purple-200: #cbbdea;
+	--color-purple-300: #b4a1e1;
+	--color-purple-400: #9d84d8;
+	--color-purple-500: #8567cf;
+	--color-purple-600: #6c4ac7;
+	--color-purple-700: #5837b4;
+	--color-purple-800: #492e98;
+	--color-purple-900: #432b88;
+	--color-purple-950: #3d2979;
+
+	--color-error-50: #ffd8d8;
+	--color-error-100: #ffacac;
+	--color-error-200: #ff8080;
+	--color-error-300: #ff5455;
+	--color-error-400: #ff2829;
+	--color-error-500: #fb0001;
+	--color-error-600: #cf0001;
+	--color-error-700: #a30000;
+	--color-error-800: #700;
+	--color-error-900: #4b0000;
+	--color-error-950: #1f0000;
+
+	--color-warning-50: #ffe6d8;
+	--color-warning-100: #ffcdac;
+	--color-warning-200: #ffb680;
+	--color-warning-300: #ffa354;
+	--color-warning-400: #ff9228;
+	--color-warning-500: #fb7b00;
+	--color-warning-600: #cf6500;
+	--color-warning-700: #a35000;
+	--color-warning-800: #773a00;
+	--color-warning-900: #4b2400;
+	--color-warning-950: #1f0f00;
+
+	--color-success-50: ##fcfffd;
+	--color-success-100: #cfd;
+	--color-success-200: #9dffbd;
+	--color-success-300: #6dff9d;
+	--color-success-400: #3eff7d;
+	--color-success-500: #0eff5d;
+	--color-success-600: #00dd48;
+	--color-success-700: #00ae39;
+	--color-success-800: #007e29;
+	--color-success-900: #004f19;
+	--color-success-950: #001f0a;
+
 	--color-interactive1: var(--color-purple);
 	--color-interactive3: var(--color-lightgray);
 	--color-link: #1400ff;
