--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -228,7 +228,7 @@
 									{{ 'RecBadgeDetail.duration' | translate }}
 								</dt>
 								<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">
-									{{ +config.duration | hourPipe }} {{ 'RecBadge.hours' | translate | lowercase }}
+									{{ +config.duration | hourPipe }} {{ 'RecBadge.hours' | translate }}
 								</dd>
 							</div>
 
