--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -63,15 +63,15 @@
 				}
 			}
 			&.level-2 {
-				color: #3d2979;
+				color: var(--color-purple-950);
 				circle {
-					fill: #b4a1e1;
+					fill: var(--color-purple-300);
 				}
 			}
 			&.level-3 {
 				color: white;
 				circle {
-					fill: #6c4ac7;
+					fill: var(--color-purple-600);
 				}
 			}
 			&.level-4,
@@ -81,16 +81,12 @@
 					fill: var(--color-purple);
 				}
 			}
-			&.future, &.future-sub {
-				color: #514000;
-				circle {
-					stroke: #514000;
-					fill: #ffeb9c;
-				}
-			}
+			&.future,
 			&.future-sub {
+				color: var(--color-yellow-800);
 				circle {
-					fill: #FFCF0F;
+					stroke: var(--color-yellow-800);
+					fill: var(--color-yellow-200);
 				}
 			}
 		}
@@ -164,7 +160,7 @@
 
 	&__future {
 		&:before {
-			background-color: #ffeb9c;
+			background-color: var(--color-yellow-300);
 		}
 	}
 }
