feat(translations): translate legend of bubbles

--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
@@ -16,9 +16,9 @@
 	}
 	<div #d3canvas></div>
 	<div class="tw-p-2 visualiser-legend">
-		<span class="visualiser-legend__esco">ESCO-Bereiche</span>
+		<span class="visualiser-legend__esco">{{ 'RecBadge.ESCOAreas' | translate }}</span>
 		@if (hasFutureSkills) {
-			<span class="visualiser-legend__future">Future Skills nach Ulf Ehers</span>
+			<span class="visualiser-legend__future">{{ 'RecBadge.FutureSkillsAccrodingToUlfEhers' | translate }}</span>
 		}
 	</div>
 
