feat(layout): move icon in button to center when mobile view active

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -15,7 +15,7 @@
 						*ngIf="activeTab === 'badges' || activeTab === 'profile'"
 						icon="lucideUpload"
 						[variant]="activeTab === 'profile' ? 'secondary' : ''"
-						[iconLeft]="true"
+						[iconLeft]="!mobile"
 						(click)="uploadBadge()"
 						[disabled-when-requesting]="true"
 						[text]="mobile ? null : ('RecBadge.uploadBadge' | translate)"
