fix: resolve issues after merge

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -14,7 +14,7 @@
 					<oeb-button
 						*ngIf="activeTab === 'badges' || activeTab === 'profile'"
 						icon="lucideUpload"
-						[variant]="activeTab === 'profile' ? 'secondary' : ''"
+						[variant]="activeTab === 'profile' ? 'secondary' : 'default'"
 						[iconLeft]="!mobile"
 						(click)="uploadBadge()"
 						[disabled-when-requesting]="true"
