--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -14,27 +14,307 @@
 
 			<cdk-step
 				[label]="'CreateBadge.enterDetailsStep' | translate"
-				[stepControl]="$any(stepOne.lpDetailsForm)"
 				[optional]="false"
 				[errorMessage]="'General.validationCompleteForm' | translate"
 			>
-				<learningpath-details
-					#stepOne
-					[learningPathBadgeData]="{ learningPath: existingLearningPath, lpBadge: existingLpBadge }"
-					[issuer]="issuer"
-				></learningpath-details>
+				<section class="tw-mt-6 md:tw-mt-7 section oeb-section">
+					<h2 hlmH2 class="tw-font-bold">2. {{ 'LearningPath.enterDetails' | translate }}</h2>
+
+					<div class="md:tw-mx-10">
+						<oeb-input
+							[label]="'1. ' + ('LearningPath.title' | translate)"
+							[control]="learningPathForm.rawControlMap.name"
+							[autofocus]="true"
+							[sublabelRight]="'(max. 60 ' + ('General.characters' | translate) + ')'"
+						></oeb-input>
+						<oeb-input
+							[label]="'2. ' + ('LearningPath.description' | translate)"
+							[control]="learningPathForm.rawControlMap.description"
+							[fieldType]="'textarea'"
+							sublabelRight="max. 700 {{ 'General.characters' | translate }} "
+							placeholder="{{ 'LearningPathEditor.shortDescription' | translate }}"
+						></oeb-input>
+
+						<div class="tw-mt-6 md:tw-mt-7 tw-relative" id="imageSection" #imageSection>
+							<!-- <span class="input-label md:tw-flex-[0_0_10em]"> Badge-{{ 'Issuer.image' | translate }}</span> -->
+							<span
+								hlmP
+								class="tw-text-oebblack tw-font-semibold"
+								[innerHTML]="3 + ' ' + ('LearningPath.mdImage' | translate)"
+							></span>
+							<div
+								class="tw-flex tw-flex-col tw-gap-4 lg:tw-flex-row tw-bg-white tw-p-8 tw-justify-evenly tw-mr-auto tw-rounded-2xl tw-h-fit tw-border tw-border-solid tw-border-purple"
+							>
+								<div
+									class="tw-w-full tw-bg-[var(--color-lightgreen)] tw-rounded-[10px] tw-py-[16px] tw-px-[32px]"
+								>
+									<bg-formfield-image
+										#imageField
+										[label]="useOurEditor"
+										[labelStyle]="
+											'tw-w-full tw-text-oebblack tw-font-bold tw-text-[22px] tw-text-center tw-leading-[26.4px]'
+										"
+										[sublabel]="imageSublabel"
+										[text_body]="selectFromMyFiles"
+										dropZoneInfo1="Drag & Drop"
+										[dropZoneInfo2]="chooseFromExistingIcons"
+										imageLoaderName="badge"
+										[newDropZone]="true"
+										[generateRandom]="false"
+										[type]="'badge'"
+										[allowedFileFormats]="allowedFileFormats"
+										(generateRandomImage)="generateRandomImage()"
+										(imageUploaded)="
+											generateUploadImage(
+												$event,
+												learningPathForm.value,
+												learningPathForm.value.useIssuerImageInBadge
+											)
+										"
+										[placeholderImage]="badgeClassPlaceholderImageUrl"
+										[control]="learningPathForm.rawControlMap.badge_image"
+									>
+									</bg-formfield-image>
+									<span
+										class="tw-italic tw-text-sm md:tw-flex md:tw-justify-center md:tw-items-center"
+										>{{ 'General.fileformats' | translate }}: SVG
+										{{ 'General.and' | translate }} PNG</span
+									>
+									<div class="tw-w-full tw-bg-white tw-p-4 tw-rounded-[10px] tw-mt-4">
+										<span class="tw-text-sm tw-text-oebblack tw-italic">
+											{{ 'CreateBadge.issuerImageInBadgeImageInfo' | translate }}
+										</span>
+									</div>
+								</div>
+								<div class="tw-italic tw-self-start tw-mt-6 tw-text-[24px]">
+									{{ 'General.or' | translate }}
+								</div>
+								<div
+									class="tw-w-full tw-bg-[var(--color-lightgreen)] tw-rounded-[10px] tw-py-[16px] tw-px-[32px] tw-max-h-[400px]"
+								>
+									<bg-formfield-image
+										#customImageField
+										[label]="useOwnVisual"
+										[labelStyle]="
+											'tw-w-full tw-text-oebblack tw-font-bold tw-text-[22px] tw-text-center tw-leading-[26.4px]'
+										"
+										[sublabel]="uploadOwnDesign"
+										text_body="{{ 'RecBadge.uploadOwnVisual' | translate }}"
+										imageLoaderName="basic"
+										[newDropZone]="true"
+										[type]="'badge'"
+										[allowedFileFormats]="allowedFileFormatsCustom"
+										[generateRandom]="false"
+										(generateRandomImage)="generateRandomImage()"
+										(imageUploaded)="generateCustomUploadImage($event)"
+										[placeholderImage]="badgeClassPlaceholderImageUrl"
+										[control]="learningPathForm.rawControlMap.badge_customImage"
+									>
+									</bg-formfield-image>
+									<span
+										class="tw-italic tw-text-sm md:tw-flex md:tw-justify-center md:tw-items-center"
+										>{{ 'General.fileformats' | translate }}: PNG</span
+									>
+								</div>
+								<badge-studio
+									#badgeStudio
+									[formData]="learningPathForm.value"
+									[hidden]="true"
+								></badge-studio>
+							</div>
+						</div>
+						<p
+							hlmP
+							size="sm"
+							id="imageTextError"
+							[hidden]="!imageFieldDirty || !learningPathForm.hasError('imageRequired')"
+							class="tw-font-normal tw-text-center tw-w-full tw-text-red tw-mt-2"
+						>
+							{{ 'CreateBadge.imageRequiredError' | translate }}.
+						</p>
+						<p
+							hlmP
+							size="sm"
+							[hidden]="!isCustomImageLarge"
+							class="tw-font-normal md:tw-pl-[13.5rem] u-text-error"
+						>
+							{{ 'CreateBadge.imageTooLarge' | translate }}.
+						</p>
+					</div>
+				</section>
 			</cdk-step>
 			<cdk-step
 				[label]="'LearningPath.includedBadges' | translate"
-				[stepControl]="$any(stepTwo.lpBadgesForm)"
 				[optional]="false"
 				errorMessage="Wähle mindestens 3 Badges aus"
 			>
-				<learningpath-badges
+				<ng-template [showLoader]="true" [bgAwaitPromises]="badgesLoaded">
+					<div class="tw-mt-6 md:tw-mt-7 oeb-section section">
+						<h2 hlmH2 class="tw-font-bold">3. {{ 'LearningPath.chooseBadges' | translate }}</h2>
+
+						<div class="tw-m-4 md:tw-m-12 tw-rounded-2xl tw-p-6 md:tw-p-8 tw-bg-white">
+							<p class="tw-flex tw-flex-col tw-gap-2 tw-text-purple tw-text-[18px] tw-leading-[23.4px]">
+								<span class="tw-italic">{{ 'LearningPath.combineBadgeCategories' | translate }}</span>
+								<span> {{ 'LearningPath.min3Badges' | translate }}</span>
+							</p>
+							<div class="tw-flex tw-flex-wrap tw-py-6">
+								<!-- Search  -->
+								<div class="tw-pb-2 md:tw-pb-0">
+									<input
+										type="text"
+										name="forminput"
+										changeOrder
+										class="tw-border-solid tw-border-purple tw-bg-white tw-mr-6"
+										placeholder="{{ 'Badge.searchBadges' | translate }}"
+										[(ngModel)]="searchQuery"
+										[ngModelOptions]="{ standalone: true }"
+										hlmInput
+									/>
+								</div>
+
+								<div class="l-actionbar-x-groupby">
+									<label class="l-flex l-flex-2x">
+										<div class="forminput">
+											<div class="forminput-x-inputs">
+												<select
+													[(ngModel)]="groupBy"
+													#selectInput
+													class="border tw-font-normal"
+													[ngClass]="{ 'tw-font-bold!': groupBy != '---' }"
+													[ngModelOptions]="{ standalone: true }"
+													id="badge-catalog-select"
+												>
+													<option [ngValue]="'---'">{{ 'Badge.groupBy' | translate }}</option>
+													<option *ngFor="let option of groups" [value]="option">
+														{{ option }}
+													</option>
+												</select>
+											</div>
+										</div>
+									</label>
+								</div>
+							</div>
+							<ng-container *ngIf="groupBy == '---'">
+								<div class="tw-grid tw-grid-cols-badgesLp tw-gap-6 tw-mt-4">
+									<bg-badgecard
+										*ngFor="let badge of badgeResults; let i = index"
+										[badgeTitle]="badge.name"
+										[badgeImage]="badge.image"
+										[badgeDescription]="badge.description"
+										[badgeSlug]="badge.slug"
+										[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
+										[badgeIssueDate]="badge.createdAt"
+										[public]="true"
+										[publicUrl]="badge.url"
+										[issuerSlug]="badge.issuerSlug"
+										[competencies]="badge.extension['extensions:CompetencyExtension']"
+										(ngModelChange)="checkboxChange($event, badge)"
+										(checkboxChange)="checkboxChange($event, badge)"
+										[checked]="badgeChecked(badge)"
+										[showCheckbox]="true"
+									></bg-badgecard>
+								</div>
+							</ng-container>
+							<ng-container *ngIf="groupBy == 'Kategorie' || groupBy == 'Category'">
+								<ng-container *ngFor="let categoryGroup of badgeResultsByCategory">
+									<h3 class="u-text-h3-semibold u-margin-bottom2x u-margin-top6x u-text-dark1">
+										{{ categoryOptions[categoryGroup.category] }}
+										<span class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
+											>{{ categoryGroup.badges.length }}
+											{{ categoryGroup.badges.length == 1 ? 'Badge' : 'Badges' }}</span
+										>
+									</h3>
+									<div class="tw-grid tw-grid-cols-badgesLp tw-gap-6">
+										<!-- TODO: Fix the badgecard link for sharing and routing -->
+										<bg-badgecard
+											*ngFor="let badge of categoryGroup.badges"
+											[badgeTitle]="badge.name"
+											[badgeImage]="badge.image"
+											[badgeDescription]="badge.description"
+											[badgeSlug]="badge.slug"
+											[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
+											[badgeIssueDate]="badge.createdAt"
+											[public]="true"
+											[publicUrl]="badge.url"
+											[competencies]="badge.extension['extensions:CompetencyExtension']"
+											[showCheckbox]="true"
+											(ngModelChange)="checkboxChange($event, badge)"
+											(checkboxChange)="checkboxChange($event, badge)"
+											[checked]="badgeChecked(badge)"
+										></bg-badgecard>
+									</div>
+								</ng-container>
+							</ng-container>
+							<ng-container *ngIf="groupBy == 'Issuer' || groupBy == 'Institution'">
+								<ng-container *ngFor="let issuerGroup of badgeResultsByIssuer">
+									<h3 class="u-text-h3-semibold u-margin-bottom2x u-margin-top6x u-text-dark1">
+										{{ issuerGroup.issuerName }}
+										<span class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
+											>{{ issuerGroup.badges.length }}
+											{{ issuerGroup.badges.length == 1 ? 'Badge' : 'Badges' }}</span
+										>
+									</h3>
+									<div class="tw-grid sm:tw-grid-cols-badgesLp tw-gap-6">
+										<!-- TODO: Fix the badgecard link for sharing and routing -->
+										<bg-badgecard
+											*ngFor="let badge of issuerGroup.badges"
+											[badgeTitle]="badge.name"
+											[badgeImage]="badge.image"
+											[badgeDescription]="badge.description"
+											[badgeSlug]="badge.slug"
+											[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
+											[badgeIssueDate]="badge.createdAt"
+											[public]="true"
+											[publicUrl]="badge.url"
+											[competencies]="badge.extension['extensions:CompetencyExtension']"
+											[showCheckbox]="true"
+											(ngModelChange)="checkboxChange($event, badge)"
+											(checkboxChange)="checkboxChange($event, badge)"
+											[checked]="badgeChecked(badge)"
+										></bg-badgecard>
+									</div>
+								</ng-container>
+							</ng-container>
+							<p *ngIf="selectedBadges.length == 1" class="tw-mt-6">
+								{{ 'LearningPath.selectedBadgesOne' | translate }}
+							</p>
+							<p *ngIf="selectedBadges.length > 1" class="tw-mt-6">
+								{{ 'LearningPath.selectedBadges' | translate: { count: selectedBadges.length } }}
+							</p>
+							<oeb-separator
+								class="tw-block tw-mb-8 tw-mt-8 tw-bg-white tw-border-dashed tw-border tw-border-purple"
+							></oeb-separator>
+
+							<section *ngIf="selectedBadges.length > 2">
+								<h2 class="tw-text-purple tw-text-[22px] tw-leading-[120%]">
+									Optional:
+									<span class="tw-font-bold">{{ 'LearningPath.flexibleSelection' | translate }}</span>
+								</h2>
+								<p class="tw-text-purple tw-italic tw-text-lg tw-my-2">
+									{{ 'LearningPath.flexibleSelectionInfo' | translate }}
+								</p>
+								<span class="tw-text-oebblack tw-text-lg">{{
+									'LearningPath.learnersHaveTo' | translate
+								}}</span>
+								<oeb-select
+									[options]="selectMinBadgesOptions"
+									[control]="selectMinBadgesControl"
+									[noTopMargin]="true"
+									placeholder="{{ 'General.all' | translate }}"
+								></oeb-select>
+								<span class="tw-text-oebblack tw-text-lg">{{
+									'LearningPath.learnersHaveTo2' | translate
+								}}</span>
+							</section>
+						</div>
+					</div>
+				</ng-template>
+
+				<!-- <learningpath-badges
 					#stepTwo
 					[learningPath]="existingLearningPath"
 					(selectedBadgesChanged)="updateSelectedBadges($event)"
-				></learningpath-badges>
+				></learningpath-badges> -->
 			</cdk-step>
 			<cdk-step [label]="'LearningPath.badgeSequenceStep' | translate">
 				<ng-container *ngIf="step3Loaded">
@@ -48,22 +328,128 @@
 				</ng-container>
 			</cdk-step>
 			<cdk-step [label]="'CreateBadge.stepFinish' | translate">
-				<learningpath-tags
-					[learningPath]="existingLearningPath"
-					(tagsChanged)="updateTags($event)"
-					[lpName]="lpName"
-					[lpDescription]="lpDescription"
-					[lpImage]="lpImage"
-				></learningpath-tags>
+				<div class="section tw-mt-6 oeb-section tw-bg-[var(--color-lightgray)] tw-rounded-[25px]">
+					<div>
+						<h2 hlmH2 class="tw-text-purple tw-flex tw-gap-2 tw-font-bold">
+							<span>{{ 'LearningPath.addTag' | translate }}</span>
+						</h2>
+						<p class="tw-italic tw-text-purple tw-mt-2" [innerHtml]="'CreateBadge.tagInfo' | translate"></p>
+
+						<div class="tw-flex tw-gap-2 oeb tw-mt-4">
+							<div class="tw-flex tw-gap-4 tw-items-center tw-mb-2">
+								<span class="tw-font-semibold tw-text-lg tw-text-oebblack tw-uppercase"> Tag</span>
+
+								<div class="ng-autocomplete">
+									<ng-autocomplete
+										name="addtag"
+										id="addtag"
+										#newTagInput
+										[data]="existingTags"
+										maxlength="50"
+										[isLoading]="existingTagsLoading"
+										searchKeyword="name"
+										placeholder="{{ 'CreateBadge.newTag' | translate }}"
+										(keypress)="handleTagInputKeyPress($event)"
+										[itemTemplate]="itemTemplate"
+										[notFoundTemplate]="notFoundTemplate"
+									>
+									</ng-autocomplete>
+
+									<ng-template #itemTemplate let-item>
+										<a [innerHTML]="item.name"></a>
+									</ng-template>
+
+									<ng-template #notFoundTemplate let-notFound>
+										<div>{{ 'CreateBadge.tagDoesNotExist' | translate }}</div>
+									</ng-template>
+								</div>
+								<oeb-button
+									size="sm"
+									type="button"
+									(click)="addTag()"
+									text="{{ 'General.add' | translate }}"
+								>
+								</oeb-button>
+							</div>
+						</div>
+						<div *ngIf="lpTags.size > 0" class="tw-flex tw-flex-wrap tw-gap-4 tw-w-[70%] tw-ml-[3.2rem]">
+							<div
+								class="tw-flex tw-items-center tw-rounded-full tw-py-1 tw-mb-2"
+								*ngFor="let tag of lpTags"
+							>
+								<oeb-button
+									variant="secondary"
+									size="xxs"
+									(click)="removeTag(tag)"
+									icon="lucideCircleX"
+									text="{{ tag }}"
+								>
+								</oeb-button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="tw-mt-6 md:tw-mt-7 oeb-section section">
+					<h2 hlmH2 class="tw-font-bold">{{ 'LearningPath.lpParticipationBadge' | translate }}</h2>
+					<p
+						hlmP
+						class="tw-text-[18px] tw-mt-2 tw-leading-[23.4px] tw-italic tw-font-bold"
+						[innerHtml]="'LearningPath.lpDerivedData' | translate"
+					></p>
+					<div class="tw-mt-6 tw-flex tw-gap-6">
+						<div
+							class="tw-bg-white tw-flex tw-justify-center tw-items-center tw-border-purple tw-border-solid tw-border tw-rounded-[10px] tw-min-w-[260px] tw-w-[260px] tw-h-[190px]"
+						>
+							<!-- <img
+								class="md:tw-w-[145px] tw-w-[65px]"
+								[loaded-src]="lpImage"
+								[loading-src]="badgeLoadingImageUrl"
+								[error-src]="badgeFailedImageUrl"
+								width="38"
+							/> -->
+						</div>
+						<div class="tw-flex tw-flex-col tw-gap-2">
+							<h3
+								hlmH3
+								class="tw-text-oebblack tw-font-bold tw-uppercase tw-text-[18px] tw-leading-[21.6px]"
+							>
+								Titel
+							</h3>
+							<!-- <span> {{lpDetailsForm.rawControlMap.name.value}}</span> -->
+							<span>{{ lpName }}</span>
+
+							<h3
+								hlmH3
+								class="tw-text-oebblack tw-font-bold tw-uppercase tw-text-[18px] tw-leading-[21.6px]"
+							>
+								{{ 'LearningPath.shortDescription' | translate }}
+							</h3>
+							<!-- <span> {{lpDetailsForm.rawControlMap.description.value}}</span> -->
+							<span>{{ lpDescription }}</span>
+						</div>
+					</div>
+				</div>
+				<p
+					class="tw-italic tw-text-[24px]/[1.2em] tw-mt-12"
+					[innerHTML]="'LearningPath.lastBadgeInfo' | translate"
+				></p>
+
+				<div class="tw-mt-8">
+					<p
+						class="tw-text-end tw-text-oebblack tw-italic tw-text-lg"
+						[innerHTML]="'CreateBadge.licenseInfo' | translate"
+					></p>
+				</div>
 			</cdk-step>
 		</oeb-stepper>
 	</ng-container>
 
-	<div class="tw-flex tw-justify-end">
+	<!-- <div class="tw-flex tw-justify-end">
 		<p *ngIf="stepper?.selected?.hasError" class="tw-inline-block tw-text-red">
 			{{ stepper.selected.errorMessage }}
 		</p>
-	</div>
+	</div> -->
 
 	<form [formGroup]="learningPathForm.rawControl" #formElem (ngSubmit)="onSubmit()" novalidate>
 		<div class="tw-flex tw-justify-between md:tw-justify-end tw-flex-wrap sm:tw-flex-nowrap tw-gap-2 tw-mt-8">
