--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -21,6 +21,7 @@
 				// cursor: pointer;
 				// word-break: break-all;
 				hyphens: auto;
+				text-wrap: balance;
 
 				&.description {
 					position: relative;
@@ -44,16 +45,27 @@
 					width: max-content;
 				}
 
+				div.studyload__wrapper {
+					position: relative;
+
+					> .studyload {
+						position: absolute;
+						left: 0;
+						right: 0;
+					}
+				}
+
 				div.studyload {
 					display: flex;
 					align-items: center;
+					justify-content: center;
 					gap: 0.5ch;
 					font-weight: normal;
-					font-size: 0.95rem;
+					font-size: 0.8rem;
 					color: var(--color-black);
 
 					&::before {
-						content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock-fading-icon lucide-clock-fading"><path d="M12 2a10 10 0 0 1 7.38 16.75"/><path d="M12 6v6l4 2"/><path d="M2.5 8.875a10 10 0 0 0-.5 3"/><path d="M2.83 16a10 10 0 0 0 2.43 3.4"/><path d="M4.636 5.235a10 10 0 0 1 .891-.857"/><path d="M8.644 21.42a10 10 0 0 0 7.631-.38"/></svg>');
+						content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock-fading-icon lucide-clock-fading"><path d="M12 2a10 10 0 0 1 7.38 16.75"/><path d="M12 6v6l4 2"/><path d="M2.5 8.875a10 10 0 0 0-.5 3"/><path d="M2.83 16a10 10 0 0 0 2.43 3.4"/><path d="M4.636 5.235a10 10 0 0 1 .891-.857"/><path d="M8.644 21.42a10 10 0 0 0 7.631-.38"/></svg>');
 						align-self: center;
 						display: inline-flex;
 					}
