Feat/learner profile (#1393)
* feat: add initial skill visualisation component

* fix(skill-visualisation): clean up, ts types, comments

* feat(skill-visualisation): add legend, mobile overview, fixes

* feat(skill-visualisation): language handling, new future skill json

* feat: improve the tooltip a bit

* feat: use more theme variables

* fix(skill-visualisation): new future colors, color for sub skill

* fix(skill-visualisation): fix for lang, remove unnecessary api call

* Feat/learner profile mobile (#1404)

* feat: add color guide

* feat: add new button variant for skills

* feat: replace hex colors with variables

* feat: move skill models, adjust imports

* feat: add translations

* feat: add icon

* feat: adjust button for icons

* fix: btn variant name

* feat: adjust directive

* feat: add translations

* feat: mobile view for bubbles

* feat: more translations

* feat: styling, text

* feat: add breakpoint service and minor adjustments

* fix: model

* fix: button again

* fix: text alignment for long esco toplevel skills

* fix(skill-visualisation): adjust future skill colors

* fix(skill-visualisation): change d3.select to svg.select

* feat: improve the tooltip a bit

* feat(translations): translate legend of bubbles

* feat(layout): move icon in button to center when mobile view active

* fix: resolve issues after merge

* build(deps): update ng-icons to support angular 19

* feat: use hour pipe to transform studyload to proper values

* feat: add icon in front of studyload

* fix(skill-visualisation): remove debug code

* feat: center text in bubbles and position studyload accordingly

* refactor: replace todo with custom breakpoint observer function

* feat: center svg on mobile

* feat: use breakpoint constant everywhere where necessary

* feat: add top-padding to studyload

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: jona159 <65068389+jona159@users.noreply.github.com>
Co-authored-by: jona159 <raabe

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -6,16 +6,19 @@
 			<ng-template [bgAwaitPromises]="[profileLoaded]">
 				<div class="md:tw-flex tw-justify-between tw-items-center oeb-section-sm">
 					<h2 hlmH2 class="tw-text-oebblack tw-font-bold tw-pb-4 md:tw-pb-0">
-						{{ 'RecBadge.greating' | translate }} {{ profile.firstName }}
+						{{ 'RecBadge.greating' | translate }}
+						<span class="tw-capitalize">{{ profile.firstName }} </span>,
+						{{ 'RecBadge.greating2' | translate }}
 					</h2>
 
 					<oeb-button
-						*ngIf="activeTab === 'badges'"
+						*ngIf="activeTab === 'badges' || activeTab === 'profile'"
 						icon="lucideUpload"
-						[iconLeft]="true"
+						[variant]="activeTab === 'profile' ? 'secondary' : 'default'"
+						[iconLeft]="!mobile"
 						(click)="uploadBadge()"
 						[disabled-when-requesting]="true"
-						[text]="'RecBadge.uploadBadge' | translate"
+						[text]="mobile ? null : ('RecBadge.uploadBadge' | translate)"
 					>
 					</oeb-button>
 				</div>
@@ -26,6 +29,9 @@
 					[activeTab]="activeTab"
 					[tabs]="tabs"
 				></oeb-backpack-tabs>
+				<ng-template #profileTemplate>
+					<recipient-skill-visualisation [skills]="allSkills"></recipient-skill-visualisation>
+				</ng-template>
 				<ng-template #badgesTemplate>
 					<ng-template [bgAwaitPromises]="[badgesLoaded]">
 						<div class="oeb-section-sm">
