--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -318,13 +318,48 @@
 			</cdk-step>
 			<cdk-step [label]="'LearningPath.badgeSequenceStep' | translate">
 				<ng-container *ngIf="step3Loaded">
-					<learningpath-badge-order
+					<div class="tw-mt-6 md:tw-mt-7 oeb-section section">
+						<h2 hlmH2 class="tw-font-bold">4. {{ 'LearningPath.badgeSequence' | translate }}</h2>
+						<div class="tw-m-4 md:tw-m-12 tw-rounded-2xl tw-p-6 tw-bg-[var(--color-white)]">
+							<p
+								hlmP
+								class="tw-text-purple tw-text-[18px] tw-leading-[23.4px] tw-italic"
+								[innerHtml]="'LearningPath.dragDropInfo' | translate"
+							></p>
+							<div class="tw-grid tw-grid-cols-1 tw-mt-4">
+								<div class="tw-list-decimal tw-mt-2" *ngFor="let item of draggableList; let i = index">
+									<div
+										class="md:tw-w-[392px] tw-flex tw-items-center tw-gap-4"
+										dndDraggable
+										[dndDraggable]="item"
+										(dndDrop)="onDrop($event, i, draggableList)"
+										dndDropzone
+									>
+										<div>
+											<span hlmP class="tw-font-extrabold tw-color-purple">{{ i + 1 }}</span>
+										</div>
+										<bg-badgecard
+											class="tw-grow"
+											[badgeTitle]="item.name"
+											[badgeImage]="item.image"
+											[badgeDescription]="item.description"
+											[badgeSlug]="item.slug"
+											[issuerTitle]="item.issuerName"
+											[checked]="true"
+										>
+										</bg-badgecard>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- <learningpath-badge-order
 						(badgeListChanged)="updateBadgeList($event)"
 						#stepThree
 						[selectedBadgeUrls]="selectedBadgeUrls"
 						[selectedBadges]="selectedBadges"
 						errorMessage="Wähle mindestens 3 Badges aus"
-					></learningpath-badge-order>
+					></learningpath-badge-order> -->
 				</ng-container>
 			</cdk-step>
 			<cdk-step [label]="'CreateBadge.stepFinish' | translate">
