--- a/src/app/public/components/impressum/impressum.component.html
+++ b/src/app/public/components/impressum/impressum.component.html
@@ -70,6 +70,12 @@
 
 				<br />
 			</p>
+            <br />
+            <p style="font-size: 1.1rem; color: black; line-height: 1.55">
+                <span style="display: block; font-weight: bold; margin-bottom: 15px"> Letzte Aktualisierung </span>
+                UI: {{uiTimestamp}}
+                <br />
+            </p>
 		</div>
 	</div>
 </div>
