--- a/src/app/public/components/impressum/impressum.component.html
+++ b/src/app/public/components/impressum/impressum.component.html
@@ -73,7 +73,8 @@
             <br />
             <p style="font-size: 1.1rem; color: black; line-height: 1.55">
                 <span style="display: block; font-weight: bold; margin-bottom: 15px"> Letzte Aktualisierung </span>
-                UI: {{uiTimestamp}}
+                UI: {{uiTimestamp}} <br />
+                Server: {{ serverTimestamp }}
                 <br />
             </p>
 		</div>
