--- a/src/app/public/components/impressum/impressum.component.html
+++ b/src/app/public/components/impressum/impressum.component.html
@@ -72,9 +72,9 @@
 			</p>
 			<br />
 			<p style="font-size: 1.1rem; color: black; line-height: 1.55">
-				<span style="display: block; font-weight: bold; margin-bottom: 15px"> Version </span>
-				UI: {{ version.tag }}-{{ version.hash.replace('g', '') }} <br />
-				Server: {{ serverVersion }}
+				<span style="display: block; font-weight: bold; margin-bottom: 15px"> Letzte Aktualisierung </span>
+				UI: {{ uiTimestamp }} <br />
+				Server: {{ serverTimestamp }}
 				<br />
 			</p>
 		</div>
