fix: make sure all forms have only one submit button

--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -51,6 +51,7 @@
 						<oeb-button
 							class="tw-mr-4"
 							variant="secondary"
+							type="button"
 							[routerLink]="['/auth/login']"
 							[disabled-when-requesting]="true"
 							text="{{ 'General.cancel' | translate }}"
