--- a/src/app/issuer/components/badgeclass-edit-copypermissions/badgeclass-edit-copypermissions.component.html
+++ b/src/app/issuer/components/badgeclass-edit-copypermissions/badgeclass-edit-copypermissions.component.html
@@ -42,6 +42,7 @@
 					>
 						<oeb-button
 							class="tw-mr-4"
+							type="button"
 							variant="secondary"
 							(click)="cancelClicked()"
 							[disabled]="!!savePromise"
