--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1123,6 +1123,7 @@
 		<div class="tw-flex tw-justify-between md:tw-justify-end tw-flex-wrap sm:tw-flex-nowrap tw-gap-2 tw-mt-8">
 			<oeb-button
 				class="tw-mr-4"
+				type="button"
 				variant="secondary"
 				(click)="cancelClicked()"
 				[disabled]="!!savePromise"
