--- a/src/app/issuer/components/badgeclass-issue-bulk-award-import/badgeclass-issue-bulk-award-import.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-import/badgeclass-issue-bulk-award-import.component.html
@@ -40,6 +40,7 @@
 				<oeb-button
 					class="tw-mr-4"
 					variant="secondary"
+					type="button"
 					(click)="updateViewState('cancel')"
 					[text]="'General.cancel' | translate"
 				></oeb-button>
