--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -92,6 +92,7 @@
 						</oeb-button>
 						<oeb-button
 							size="md"
+							type="submit"
 							[text]="'Issuer.addMember' | translate"
 							[disabled]="staffCreateForm.invalid"
 						>
@@ -141,6 +142,7 @@
 						</oeb-button>
 						<oeb-button
 							size="md"
+							type="submit"
 							[text]="'Issuer.addMember' | translate"
 							[disabled]="staffRequestRoleForm.invalid"
 						>
