--- a/src/app/recipient/components/recipient-badge-collection-edit-form/recipient-badge-collection-edit-form.component.html
+++ b/src/app/recipient/components/recipient-badge-collection-edit-form/recipient-badge-collection-edit-form.component.html
@@ -145,6 +145,7 @@
 			<div class="l-flex l-flex-1x l-flex-justifyend u-margin-top2x">
 				<oeb-button
 					variant="secondary"
+					type="button"
 					[text]="'General.cancel' | translate"
 					[routerLink]="['/recipient/badges']"
 					[queryParams]="{ tab: 'collections' }"
