--- a/src/app/signup/components/signup/signup.component.html
+++ b/src/app/signup/components/signup/signup.component.html
@@ -549,6 +549,7 @@
 							<!-- Not sure if cancel button still in use -->
 							<oeb-button
 								class="tw-mr-4"
+								type="button"
 								variant="secondary"
 								(click)="oAuthManager.cancelCurrentAuthorization()"
 								*ngIf="oAuthManager.currentAuthorization"
