--- a/src/app/auth/components/request-password-reset/request-password-reset.component.html
+++ b/src/app/auth/components/request-password-reset/request-password-reset.component.html
@@ -37,6 +37,7 @@
 
 			<div class="tw-flex tw-justify-between tw-flex-wrap sm:tw-flex-nowrap tw-gap-2 tw-mt-8">
 				<oeb-button
+					type="button"
 					class="tw-mr-4"
 					variant="secondary"
 					[routerLink]="['/auth/login']"
