--- a/src/app/issuer/components/issuer-staff-create-dialog/issuer-staff-create-dialog.component.html
+++ b/src/app/issuer/components/issuer-staff-create-dialog/issuer-staff-create-dialog.component.html
@@ -49,7 +49,7 @@
 				</div>
 
 				<div class="l-stack l-stack-buttons u-margin-top4x">
-					<button class="button">{{ 'Issuer.addMember' | translate }}</button>
+					<button class="button" type="submit">{{ 'Issuer.addMember' | translate }}</button>
 					<button
 						class="button button-secondary"
 						type="button"
