--- a/src/app/profile/components/change-password/change-password.component.html
+++ b/src/app/profile/components/change-password/change-password.component.html
@@ -59,6 +59,7 @@
 				<oeb-button
 					class="tw-mr-4"
 					variant="secondary"
+					type="button"
 					[routerLink]="['/profile/profile']"
 					[disabled-when-requesting]="true"
 					text="{{ 'General.cancel' | translate }}"
