--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -176,7 +176,7 @@
 		gap: 4px;
 
 		&:before {
-			content: "";
+			content: '';
 			display: block;
 			border: 1px solid var(--color-black);
 			height: 16px;
