--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
@@ -38,7 +38,7 @@
 						</competency-accordion>
 					}
 				} @else {
-					@for (skill of getTopLevelSkills(); track skill.id; let idx = $index) {
+					@for (skill of getTopLevelSkillsSorted(); track skill.id; let idx = $index) {
 						<li>
 							<oeb-button
 								(click)="selectSkillForSingleView(skill, idx)"
