--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -32,9 +32,7 @@
 
 				&.description[data-title]::after {
 					content: attr(data-title);
-					position: absolute;
-					top: 0;
-					left: 0;
+					position: fixed;
 					background-color: #f8f6fc;
 					border-radius: 10px;
 					border: 1px solid var(--color-purple);
@@ -43,10 +41,10 @@
 					padding: 1em;
 					max-width: min(40ch, 25vw);
 					width: max-content;
+					z-index: 100;
 				}
 
 				div.studyload__wrapper {
-					position: relative;
 					display: flex;
 					flex-direction: column;
 					align-items: center;
