--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -32,7 +32,9 @@
 
 				&.description[data-title]::after {
 					content: attr(data-title);
-					position: fixed;
+					position: absolute;
+					top: 0;
+					left: 0;
 					background-color: #f8f6fc;
 					border-radius: 10px;
 					border: 1px solid var(--color-purple);
@@ -41,22 +43,11 @@
 					padding: 1em;
 					max-width: min(40ch, 25vw);
 					width: max-content;
-					z-index: 100;
 				}
 
 				div.studyload__wrapper {
-					display: flex;
-					flex-direction: column;
-					align-items: center;
-					justify-content: center;
-					gap: 8px;
-
-					> svg {
-						width: 2em;
-						height: auto;
-						stroke: black;
-						--ng-icon__stroke-width: 1;
-					}
+					position: relative;
+					width: 100%;
 
 					> .studyload {
 						position: absolute;
